# mmfm

./: .clang-format  DEVELOP.md  MANUAL.md  README.md  ROADMAP.md  bundle.sh  makefile  makefileGMAKE  makefileLINUX  meson.build  version.sh
doc/: ROAD.md  TECH.md  TEST.md  USER.md  ZMDE.md
res/: main.css  main.html  mmfm.desktop
res/html/: main-black.css  main.css  main.html
src/: ku_wl_connector.c
src/kinetic_ui/: ku_bitmap.c  ku_connector_wayland.c  ku_css.c  ku_draw.c  ku_event.c  ku_fontconfig.c  ku_gen_css.c  ku_gen_html.c  ku_gen_textstyle.c  ku_gen_type.c  ku_gl.c  ku_gl_atlas.c  ku_gl_floatbuffer.c  ku_html.c  ku_png.c  ku_recorder.c  ku_rect.c  ku_renderer_egl.c  ku_renderer_soft.c  ku_table.c  ku_text.c  ku_util.c  ku_view.c  ku_window.c  ku_wl_connector.c
src/kinetic_ui/egl/: ku_gl.c  ku_gl_atlas.c  ku_gl_shader.c
src/kinetic_ui/handler/: vh_anim.c  vh_button.c  vh_cv_body.c  vh_cv_evnt.c  vh_cv_scrl.c  vh_drag.c  vh_key.c  vh_knob.c  vh_slider.c  vh_table.c  vh_tbl_body.c  vh_tbl_evnt.c  vh_tbl_head.c  vh_tbl_scrl.c  vh_textinput.c  vh_touch.c
src/kinetic_ui/texture/: tg_css.c  tg_knob.c  tg_scaledimg.c  tg_text.c
src/media_coder/: coder.c
src/media_player/: clock.c  decoder.c  framequeue.c  mediaplayer.c  packetqueue.c
src/media_viewer/: clock.c  decoder.c  packetqueue.c
src/mmfm/: callbacks.c  config.c  evrecorder.c  filemanager.c  files.c  fontconfig.c  kvlist.c  library.c  mmfm.c  pdf.c  ui.c  visible.c  wl_connector.c
src/mmfm/coder/: coder.c
src/mmfm/modules/zen_media_player/: options.c  player.c  render.c  video.c
src/mmfm/modules/zen_media_transcoder/: coder.c
src/mmfm/modules/zen_ui/: ui_compositor.c  ui_generator.c  ui_manager.c  ui_table.c  ui_texmap.c
src/mmfm/modules/zen_wm/: wm_connector.c
src/mmfm/ui/: column.c  textlist.c  ui.c  ui_about_popup.c  ui_activity_popup.c  ui_alert_popup.c  ui_cliplist.c  ui_decision_popup.c  ui_filelist.c  ui_filter_bar.c  ui_filter_popup.c  ui_inputfield_popup.c  ui_lib_init_popup.c  ui_meta_view.c  ui_play_controls.c  ui_popup_switcher.c  ui_settings_popup.c  ui_song_infos.c  ui_song_menu_popup.c  ui_util.c  ui_visualizer.c
src/mmfm/utils/: bm_rgba_util.c  bm_util.c  cstr_util.c
src/mmfm/viewer/: clock.c  framequeue.c  packetqueue.c  viewer.c
src/mmfm/zen_media_player/: codec.c  decoder.c  packet.c  player.c  stream.c  zplayer.c
src/mmfm/zen_media_transcoder/: coder.c
src/mmfm/zen_ui/: ui_compositor.c  ui_generator.c  ui_manager.c  ui_table.c  ui_util.c
src/mmfm/zen_ui/gl/: gl_connector.c
src/mmfm/zen_ui/html/: html.c
src/mmfm/zen_ui/view/: tg_css.c  tg_scaledimg.c  vh_anim.c  vh_cv_body.c  vh_cv_evnt.c  vh_cv_scrl.c  vh_drag.c  vh_dragger.c  vh_tbl_body.c  vh_tbl_evnt.c  vh_tbl_scrl.c  vh_textinput.c  view.c  view_generator.c  view_layout.c  viewgen_css.c
src/mmfm/zen_wm/: wm_connector.c
src/modules/zen_core/: zc_bitmap.c  zc_channel.c  zc_cstring.c  zc_cstrpath.c  zc_graphics.c  zc_log.c  zc_memory.c  zc_texmap.c
src/modules/zen_gfx/: zc_draw.c  zc_text.c
src/modules/zen_math/: zm_math2.c  zm_math3.c  zm_math4.c
src/modules/zen_media_player/: clock.c  codec.c  frame.c  packet.c  player.c  render.c  strcomm.c  stream.c  tag.oc
src/modules/zen_media_transcoder/: coder.c
src/modules/zen_ui/: ui_compositor.c  ui_generator.c  ui_manager.c
src/modules/zen_ui/gl/: gl_connector.c  gl_floatbuffer.c  gl_shader.c
src/modules/zen_ui/html/: html.c
src/modules/zen_ui/text/: text.c
src/modules/zen_ui/view/: tg_css.c  tg_knob.c  tg_picker.c  tg_text.c  (+13 more)
src/modules/zen_wm/: wm_connector.c
src/mt_core/: mt_log.c  mt_memory.c  mt_path.c  mt_string.c  mt_vector.c
src/mt_core_ext/: mt_string_ext.c
src/zen_core/: zc_bm_argb.c  zc_bm_rgba.c  zc_channel.c  zc_cstring.c  zc_map.c  zc_memory.c  zc_path.c  zc_time.c  zc_vector.c  zc_wrapper.c
src/zen_gfx/: zc_draw.c  zc_text.c
src/zen_math/: zc_mat3.c  zc_util2.c  zc_vec2.c  zc_vec4.c
src/zen_ui/: ku_bitmap.c  ku_draw.c  ku_layout.c  ku_rect.c  ku_table.c  ku_text.c  ku_util.c  ku_window.c  ui_compositor.c  ui_generator.c  ui_manager.c  ui_table.c  ui_util.c
src/zen_ui/view/: tg_css.c  tg_knob.c  tg_scaledimg.c  tg_text.c  vh_anim.c  vh_button.c  vh_cv_body.c  vh_cv_evnt.c  vh_cv_scrl.c  vh_drag.c  vh_key.c  vh_knob.c  vh_roll.c  vh_slider.c  vh_tbl_body.c  vh_tbl_evnt.c  vh_tbl_head.c  vh_tbl_scrl.c  vh_textinput.c  vh_touch.c  view.c  view_layout.c  viewgen_css.c  viewgen_html.c  viewgen_type.c
src/zen_wm/: wm_connector.c  wm_event.c
src/zenmedia/: callbacks.c  database.c  evrecorder.c  library.c  library.c~  remote.c  selection.c  visible.c  visible.c~  zenmusic.c  zenmusic.c~
src/zenmedia/ui/: ui.c  ui.c~  ui_about_popup.c  ui_alert_popup.c  ui_cliplist.c  ui_editor_popup.c  ui_filter_bar.c  ui_filter_popup.c  ui_meta_view.c  ui_play_controls.c  ui_popup_switcher.c  ui_settings_popup.c  ui_song_infos.c  ui_song_menu_popup.c  ui_songlist.c  ui_songlist.c~  ui_visualizer.c
svg/: terminus.otb
tst/: record.sh  replay.sh  rerecord.sh  run.sh  session0.rec  test_rec.sh  test_rep.sh  test_rerec.sh  test_run.sh  valgrind.supp
tst/file_delete_test/: session.rec
tst/file_info_master/record/: session.rec
tst/file_info_test/: .emacs hidden invalid file  session.rec
tst/file_info_test/record/: session.rec
tst/file_ops_master/record/: config.kvl  session.rec
tst/file_ops_test/: session.rec
tst/file_ops_test/record/: config.kvl  session.rec
tst/file_play_master/: ADELE nocover nometa.aac
tst/file_play_master/record/: session.rec
tst/file_play_test/: session.rec
tst/file_play_test/record/: session.rec
tst/file_view_test/: session.rec
tst/result/lib1/: ADELE_SIL.aac
tst/start/lib1/: MOTHER nocover nometa.opus
tst/test_file_move/: session.rec
tst/ui_file/record/: config.kvl  session.rec
tst/ui_file_master/record/: config.kvl  session.rec
tst/ui_file_test/record/: session.rec
tst/ui_kb_master/record/: config.kvl  session.rec
tst/ui_keyboard/record/: config.kvl  session.rec
tst/ui_mouse/record/: config.kvl  session.rec
tst/ui_mouse_master/record/: config.kvl  session.rec
(+27 files in other folders)
